[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "mkl",
    "mkl-include",
    "cmeel-eigen"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyatb"
authors = [
    {name = "PYATB Developer", email="jingan@mail.ustc.edu.cn"},
]
version = "1.0.0"
description = "This is the pyatb module"
license = {text = "GPL v3.0"}
requires-python = ">=3.7"
dependencies = [
    "pybind11>=2.10.0",
    "mkl",
    "mkl-include",
    "cmeel-eigen"
]

[project.scripts]
pyatb = "pyatb.main:main"